--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -48,7 +48,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          platforms: linux/arm64
+          platforms: linux/arm/v7 
           tags: ${{ env.DOCKER_REPOSITORY }}:${{ env.TAG }}
 
       - 
