fix: fix the host problem

--- a/charts/web-app/templates/ingress.yaml
+++ b/charts/web-app/templates/ingress.yaml
@@ -27,10 +27,15 @@ spec:
     {{- end }}
   {{- end }}
   rules:
-    - http:
+  {{- range .Values.ingress.hosts }}
+    - host: {{ .host | quote }}
+      http:
         paths:
-          - path: {{ .Values.ingress.path }}
+          {{- range .paths }}
+          - path: {{ . }}
             backend:
               serviceName: {{ $fullName }}
               servicePort: {{ $svcPort }}
+          {{- end }}
+    {{- end }}
   {{- end }}
