--- a/charts/web-app/values.yaml
+++ b/charts/web-app/values.yaml
@@ -45,7 +45,10 @@ ingress:
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-  path: "/"
+  hosts:
+    - host: ""
+      paths:
+       - "/"
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
